# django-authlink

./: CONTRIB  LICENSE  MANIFEST.in  README  README.md  manage.py  pyproject.toml  requirements.txt  setup.py  test_settings.py  test_urls.py  tox.ini
.circleci/: config.yml
.github/workflows/: publish.yml  test.yml
authlink/: adapter.py  auth_backends.py  middleware.py  models.py  utils.py  views.py
authlink/api/rest_framework/: serializers.py  views.py
authlink/migrations/: 0001_initial.py
authlink/tests/: test_adapter.py  test_api.py  test_middleware.py  test_views.py  utils.py
tests/: manage.py  settings.py  test_adapter.py  test_api.py  test_auth_backends.py  test_e2e.py  test_middleware.py  test_utils.py  test_views.py  urls.py  utils.py
